--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -46,8 +46,8 @@
                             </p-select>
                         </div>
                     </div>
-                    <button (click)="create(applicationForm)" icon="pi pi-save" [loading]="loading"
-                        [disabled]="!applicationForm.valid" pButton pRipple label="Create Application"
+                    <button (click)="create(applicationForm)" icon="pi pi-plus" [loading]="loading"
+                        [disabled]="!applicationForm.valid" pButton pRipple label="Criar Aplicante"
                         class="w-auto mt-3 mr-4"></button>
                     <p-button label="Cancelar" severity="secondary" icon="pi pi-times" iconPos="left"
                         (click)="visible = false" />
